// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`performanceObserver must handle performance timing before resource completes 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "duration": 0,
        "resource": Object {
          "name": "customResource",
          "responseEnd": 0,
          "startTime": 0,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`performanceObserver must handle performance timing before resource completes 2`] = `[Function]`;

exports[`performanceObserver must work when performance observer is not available 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "duration": 42,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`performanceObserver must work when performance observer is not available 2`] = `[MockFunction]`;
